Fix bugs Statistics